ADDed a paragraph of text

--- a/helloworld.html
+++ b/helloworld.html
@@ -8,5 +8,6 @@
 <body>
     <h1> Sitio web coool</h1>
     <p> Saludos gentes</p>
+    <p> estoy por terminal mi primer curso en platzi</p>
 </body>
 </html>
